--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="container">
           <h2 class="sections-title-second">Наша команда</h2>
           <ul class="team-list list">
-            <li>
+            <li class="team-card">
               <img
                 src="./images/team-1.jpg"
                 alt="дизайнер Игорь Демьяненко"
@@ -149,7 +149,7 @@
               <h3 class="sections-title-team">Игорь Демьяненко</h3>
               <p lang="en">Product Designer</p>
             </li>
-            <li>
+            <li class="team-card">
               <img
                 src="./images/team-2.jpg"
                 alt=" фронтенд разработчик Ольга Репина"
@@ -159,7 +159,7 @@
               <h3 class="sections-title-team">Ольга Репина</h3>
               <p lang="en">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-card">
               <img
                 src="./images/team-3.jpg"
                 alt="маркетолог Николай Тарасов"
@@ -169,7 +169,7 @@
               <h3 class="sections-title-team">Николай Тарасов</h3>
               <p lang="en">Marketing</p>
             </li>
-            <li>
+            <li class="team-card">
               <img
                 src="./images/team-4.jpg"
                 alt="дизайнер Михаил Ермаков"
