--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
 
       <!-- Скрытый заголовок - Особенности-->
-      <section class="sections">
+      <section class="sections-feature">
         <div class="container">
           <h2 hidden class="visually-hidden">Особенности нашей студии</h2>
           <ul class="feature-list list">
@@ -101,12 +101,14 @@
             </li>
           </ul>
         </div>
+      </section>
 
-        <!--Чем мы занимаемся-->
+      <!--Чем мы занимаемся-->
+      <section class="sections-work">
         <div class="container">
           <h2 class="sections-title-second">Чем мы занимаемся</h2>
           <ul class="work-list list">
-            <li class="working">
+            <li class="work-item">
               <img
                 src="./images/img-1.jpg"
                 alt="программист работает за столом в офисе  изображение крупным планом"
@@ -114,7 +116,7 @@
                 height="294"
               />
             </li>
-            <li class="working">
+            <li class="work-item">
               <img
                 src="./images/img-2.jpg"
                 alt="веб дизайнеры разработчики приложений для смартфонов-команда создает рабочий интерфейс для мобильных телефонов"
@@ -122,7 +124,7 @@
                 height="294"
               />
             </li>
-            <li class="working">
+            <li class="work-item">
               <img
                 src="./images/img-3.jpg"
                 alt="Креативный художник веб-дизайна с рабочим цветным выбором графическим планшетом_"
@@ -146,8 +148,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="sections-title-team">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <div class="team-footer">
+                <h3 class="sections-title-team">Игорь Демьяненко</h3>
+                <p lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -156,8 +160,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="sections-title-team">Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+              <div class="team-footer">
+                <h3 class="sections-title-team">Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -166,8 +172,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="sections-title-team">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <div class="team-footer">
+                <h3 class="sections-title-team">Николай Тарасов</h3>
+                <p lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img
@@ -176,8 +184,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="sections-title-team">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <div class="team-footer">
+                <h3 class="sections-title-team">Михаил Ермаков</h3>
+                <p lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
