--- a/portfolio.html
+++ b/portfolio.html
@@ -63,9 +63,9 @@
       <section class="sections-title">
         <div class="container">
           <!--Скрытый заголовок Портфолио-->
-          <h1 visually-hidden hidden>Портфолио студии</h1>
+          <h1 class="visually-hidden" hidden>Портфолио студии</h1>
           <!--Скрытый заголовок Категории-->
-          <h2 visually-hidden hidden>Проекты студии</h2>
+          <h2 class="visually-hidden" hidden>Проекты студии</h2>
           <ul class="filters-button list">
             <li class="filters-item">
               <button type="button" class="link current">Все</button>
@@ -83,104 +83,121 @@
               <button type="button">Маркетинг</button>
             </li>
           </ul>
-          <div class="flex-conteiner">
-            <ul class="project list">
-              <li>
-                <img
-                  src="./images/project1.jpg"
-                  alt="три фотографии менеджеров "
-                  width="370"
-                  height="294"
-                />
+
+          <ul class="project-container list">
+            <li class="project-item">
+              <img
+                src="./images/project1.jpg"
+                alt="три фотографии менеджеров "
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title">Технокряк</h3>
                 <p>Веб-сайт</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project2.jpg"
-                  alt="два баскетболиста с мячем"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project2.jpg"
+                alt="два баскетболиста с мячем"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">
                   Постер New Orlean vs Golden Star
                 </h3>
                 <p>Дизайн</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project3.jpg"
-                  alt="логотип рыбного ресторана"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project3.jpg"
+                alt="логотип рыбного ресторана"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Ресторан Seafood</h3>
                 <p>Приложение</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project4.jpg"
-                  alt="черные наушники"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project4.jpg"
+                alt="черные наушники"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Проект Prime</h3>
                 <p>Маркетинг</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project5.jpg"
-                  alt=" две коробки белая и крафтовая"
-                  width="370"
-                  height="260"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project5.jpg"
+                alt=" две коробки белая и крафтовая"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Проект Boxes</h3>
                 <p>Приложение</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project6.jpg"
-                  alt="черный экран монитора"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project6.jpg"
+                alt="черный экран монитора"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">
                   Inspiration has no Borders
                 </h3>
                 <p>Веб-сайт</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project7.jpg"
-                  alt="открытые страницы журнала"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project7.jpg"
+                alt="открытые страницы журнала"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Издание Limited Edition</h3>
                 <p>Дизайн</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project8.jpg"
-                  alt="белая этикетка с черной надписью"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project8.jpg"
+                alt="белая этикетка с черной надписью"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Проект LAB</h3>
                 <p>Маркетинг</p>
-              </li>
-              <li>
-                <img
-                  src="./images/project9.jpg"
-                  alt="руки на клавиатуре ноутбука"
-                  width="370"
-                  height="294"
-                />
+              </div>
+            </li>
+            <li class="project-item">
+              <img
+                src="./images/project9.jpg"
+                alt="руки на клавиатуре ноутбука"
+                width="370"
+                height="294"
+              />
+              <div class="project-footer">
                 <h3 class="project-title" lang="en">Growing Business</h3>
                 <p>Приложение</p>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
